k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-deployment
  # namespace: k8s-demo-namesapace
  labels:
    app: k8s-demo # This is the label that will be used by service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-demo # This is the label that will be used by pod
  template:
    metadata:
      labels:
        app: k8s-demo # label to select the pod
    spec:
      containers:
        - name: k8s-demo-container
          image: k8s:demo
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 3001
          volumeMounts:
          - name: host-mount
            mountPath: /app/config
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: host-mount
          hostPath:
            path: /Users/al-amin/Development/Playground/k8s_demo/config
