k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
  # namespace: k8s-demo-namesapace
spec:
  type: NodePort
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3001
      nodePort: 30001
